photo move folder

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
        <div class="home-img">
-        <img src="jiwan.jpg" alt="jiwan" srcset="">
+        <img src="image/jiwan.jpg" alt="jiwan" srcset="">
        </div>
    </section>
 
@@ -53,7 +53,7 @@
    <!-- about section design -->
    <section class="about" id="about">
     <div class="about-img">
-        <img src="jiwan.jpg" alt="jiwan" srcset="">
+        <img src="image/jiwan.jpg" alt="jiwan" srcset="">
     </div>
 
     <div class="about-content">
@@ -171,7 +171,7 @@
         
                <div class="card">
                 <div class="box">
-                    <img src="jiwan.jpg" alt="">
+                    <img src="image/jiwan.jpg" alt="">
                      <div class="text">JIWAN KHADKA</div>
                      <h3>Prof : Data Analysist</h3>
                      <p><a href="https://www.facebook.com/jeewan2179?mibextid=ZbWKwL"><i class="fab fa-facebook"></i> facebook</a>  &ensp;  
@@ -182,7 +182,7 @@
 
                    <div class="card">
                     <div class="box">
-                        <img src="rupesh.jpg" alt="rupesh">
+                        <img src="image/rupesh.jpg" alt="rupesh">
                          <div class="text">RUPESH RAJBANSHI</div>
                          <h3>Prof : Graphic Designer, Social Media Manager</h3>
                          <p><a href="https://www.facebook.com/rupesh.razbnc.7?mibextid=ZbWKwL"><i class="fab fa-facebook"></i> facebook.</a> &ensp;   
@@ -193,7 +193,7 @@
 
             <div class="card">
             <div class="box">
-                <img src="sandeshlaksamba.jpg" alt="sandesh">
+                <img src="image/sandeshlaksamba.jpg" alt="sandesh">
                  <div class="text">SANDESH LAKSAMBA</div>
                  <h3>Prof : Web Developer, Graphic Designer</h3>
                  <p><a href="https://www.facebook.com/profile.php?id=100010491756772&mibextid=ZbWKwL"><i class="fab fa-facebook"></i> facebook</a>   &ensp; 
@@ -204,7 +204,7 @@
         
             <div class="card">
             <div class="box">
-                <img src="ram.jpg" alt="ram">
+                <img src="image/ram.jpg" alt="ram">
                  <div class="text">RAM TAPESH MANDAL</div>
                  <h3>Prof : Photo Editor, Graphic Designer</h3>
                  <p><a href="https://www.facebook.com/ramtapesh.mandal.1?mibextid=ZbWKwL"><i class="fab fa-facebook"></i> facebook</a>   &ensp; 
@@ -214,7 +214,7 @@
                </div>
             <div class="card">
             <div class="box">
-                <img src="karki.jpg" alt="aayush">
+                <img src="image/karki.jpg" alt="aayush">
                  <div class="text">AAYUS KARKI</div>
                  <h3>Prof : UI/UX Designer, Web Developer</h3>
                  <p><a href="https://www.facebook.com/profile.php?id=100079653687919&mibextid=ZbWKwL"><i class="fab fa-facebook"></i> facebook</a>   &ensp; 
