--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <h3>And I'm <span class="multiple-text"></span></h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ad vel, beatae corrupti voluptas doloremque.</p>
         <div class="social-media">
-           <a href="#"><i class="fa-brands fa-facebook"></i></a>
-           <a href="#"><i class="fa-brands fa-instagram"></i></a>
+           <a href="https://www.facebook.com/jeewan21A"><i class="fa-brands fa-facebook"></i></a>
+           <a href="https://www.instagram.com/jeewan2179/"><i class="fa-brands fa-instagram"></i></a>
            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
        </div>
